# beetree

./: .gitattributes  .gitignore  CMakeLists.txt  README  README.md  studiobee.cmake
application/: CMakeLists.txt
application/beetree/: CMakeLists.txt  tokens-engine.json  tokens.json
application/beetree-experimental/: CMakeLists.txt
application/beetree-experimental/test/: CMakeLists.txt
application/beetree-start-pack/include/beetree/controllers/: goal-controller.hpp
application/beetree-start-pack/include/beetree/models/: motion-model.hpp
application/beetree-start-pack/include/beetree/services/: debug-service.hpp  i-bumper-service.hpp  i-debug-service.hpp  i-reflexes-service.hpp  simple-motion-service.hpp
application/beetree-start-pack/src/controllers/: pid.cpp
application/beetree-start-pack/src/facilities/filters/: simple-bump-filter.cpp  user-event-filter.cpp  wheel-motion-with-encoders-filter.cpp
application/beetree-start-pack/src/nodes/behaviors/: null-odometry.cpp  wait-for-reflexes.cpp
application/beetree-start-pack/src/services/: simple-navigation-service.cpp
application/beetree-start-pack/test/controllers/: test-goal-controller.cpp
application/beetree-start-pack/test/facilities/: test-motor-control.cpp  test-wheel-motion-filter.cpp
application/beetree-start-pack/test/services/: test-simple-bump-service.cpp  test-simple-motion-service.cpp  test-simple-reflexes-service.cpp
application/beetree/src/btos/: clock.cpp
application/beetree/src/engine/: engine.cpp  helpers.hpp  notifier.cpp  select-algorithm.cpp
application/beetree/src/nodes/: blackboard.cpp  select-if.cpp  select.cpp
application/beetree/src/trace/: trace-protocol.cpp  trace.cpp
application/beetree/src/units/: methods.cpp
application/beetree/test/engine/: test-engine-exceptions.cpp  test-engine.cpp  test-port.cpp  test-try-catch.cpp
application/beetree/test/nodes/: test-repeat-until.cpp  test-select-if.cpp
application/beetree/test/registry/: test-register-bank.cpp
application/beetree/test/units/: test-units-fixed-pt.cpp  test-units-methods.cpp
application/cmake/: AddGccPostBuildCmds.cmake  BeeTreeInstallRegistry.cmake  FindBeeTreeTools.cmake
application/core/: CMakeLists.txt
application/core/src/btos/: memory.cpp
application/core/src/engine/: port.cpp  stack-memory-pool.cpp  try-catch-internal.hpp  try-catch.cpp
application/core/src/nodes/: null-success-fail.cpp  repeat-until.cpp  sequence.cpp
application/core/src/test-api/: behavior-reqs.cpp
application/core/test/btos/: test-stack.cpp
application/core/test/engine/: test-stack.cpp
application/core/test/nodes/: test-sequence.cpp
application/experimental/: CMakeLists.txt
application/experimental/test/: CMakeLists.txt
application/startpk/: CMakeLists.txt
application/startpk/src/nodes/: toggle-debug-led.cpp
application/startpk/test/controllers/: test-pid-controller.cpp
application/tools/: make-registry-v1.py  make-registry-v2.py  make-registry.py
application/tools/environment/: install-wsl-dependencies.sh
cmake/: FetchGTest.cmake  (+5 more)
core/test/: CMakeLists.txt  main.cpp
core/test/btos/: test-array-ref.cpp  test-stack.cpp
core/test/engine/: test-engine-exceptions.cpp  test-engine.cpp  test-port.cpp  test-stack.cpp  test-try-catch.cpp
core/test/nodes/: test-action.cpp  test-inverter.cpp  test-repeat-for.cpp  test-repeat-until.cpp  test-select-if.cpp  test-select.cpp  test-sequence.cpp  test-succeeder.cpp
core/test/registry/: test-register-bank.cpp  test-register-trace.cpp
core/test/units/: fibonochi.hpp  test-units-fixed-pt.cpp  test-units-methods.cpp  test-units-rand.cpp  test-units-trig.cpp  test-units.cpp
experimental/: CMakeLists.txt  tokens.json
experimental/include/beetree/experimental/: expected.hpp  stdcpp20.hpp
experimental/test/: CMakeLists.txt  test-expected.cpp
platform/: CMakeLists.txt
platform-os/: CMakeLists.txt
platform-os/src/: system-clock.cpp  udp-receive.cpp  udp-send.cpp
platform-stm32/: CMakeLists.txt
platform-stm32/common/: CMakeLists.txt
platform-stm32/common/src/: ring-q.c
platform-stm32/stm32f0xx/: CMakeLists.txt
platform-stm32/stm32f0xx/src/: serial-device-uart-dma.cpp
platform-stm32/stm32f0xx/src/boot/: boot-counter.cpp  boot-discrete-io.cpp  boot-pwm.cpp  boot-serial-device-i2c.cpp
platform-stm32/stm32f1xx/: CMakeLists.txt
platform-stm32/stm32g0xx/: CMakeLists.txt
platform/core/: CMakeLists.txt
platform/core/include/platform-library/: extern-c.h  ring-q.h  ring-q.hpp
platform/core/src/: ring-q.c
platform/host/: CMakeLists.txt
platform/host/src/: system-clock.cpp  udp-receive.cpp  udp-send.cpp
platform/include/beetree/platform/: i-discrete-input.hpp  i-system-clock.hpp
platform/interface/: CMakeLists.txt
platform/stm32f0xx/: CMakeLists.txt
platform/stm32g0xx/: CMakeLists.txt
platform/test/: CMakeLists.txt  test-array-ref.cpp
startpk-test-api/: CMakeLists.txt
startpk/test/: CMakeLists.txt
startpk/test/controllers/: test-goal-controller.cpp
startpk/test/facilities/: test-motor-control.cpp  test-motor-encoder.cpp  test-wheel-motion-filter.cpp
startpk/test/services/: test-simple-bump-service.cpp  test-simple-motion-service.cpp  test-simple-navigation-service.cpp  test-simple-reflexes-service.cpp
startpk/test/services/fakes/: fake-motion-service.cpp  fake-motion-service.hpp
test-api/: CMakeLists.txt
test-api/include/beetree/test/: behavior-reqs.hpp
test-api/src/: behavior-reqs.cpp
test-api/src/fakes/: test-node.cpp
test-api/src/matchers/: coordinate.cpp  motion-profile.cpp  node.cpp  pose.cpp  time.cpp  trace-package.cpp
test-api/src/matchers/internal/: coordinate-equals-matcher.cpp  motion-profile-equals-matcher.cpp  node-matchers.cpp  pose-equals-matcher.cpp  time-equals-matcher.cpp  trace-package-equals-matcher.cpp
test-api/src/mocks/: mock-node.cpp  platform-mock.cpp
test-api/src/trees/: expect-tree.cpp
tools/beeview/: CMakeLists.txt  README.md  Setup the PI.md  install-python-modules.sh  package-lock.json  package.json  run-beeview.py  webserver.js
tools/beeview/client/html/: index.html
(+379 files in other folders)
